src/main/java/com/example/footballbackend/error/NotFoundException.java
package com.example.footballbackend.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
